--- a/index.html
+++ b/index.html
@@ -12,9 +12,85 @@
 	<h3>Heading Three</h3>
 
 	<!-- Paragraphs -->
-	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of <strong>type</strong> and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, <em>remaining</em> essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing <a href="">software</a> like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
 	<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
 
+	<!--list-->
+	<ul>
+	  <li>List 1</li>
+	  <li>List 2</li>
+	  <li>List 3</li>
+	  <li>List 4</li>
+	 </ul>
+
+	 <ol>
+	 	<li>Or 1</li>
+	 	<li>Or 2</li>
+	 	<li>Or 3</li>
+	 </ol>
+ 
+ <!--tables-->
+      <table>
+      	<thread>
+      	 <tr>
+      	 	<th>Name</th>
+      	 	<th>Email</th>
+      	 	<th>Age</th>      	 
+      	 </tr>
+      	</thread>
+      	<tbody>
+      		<tr>
+      			<td>Lawrence Agyei</td>
+      			<td>lawrenceagyei90@gmail.com</td>
+      			<td>28</td>
+      		 </tbody>
+      		</tr>
+      		</tr>
+      	
+
+
+      </table>
+
+      <br>
+      <hr>
+      <br>
+
+      <!--forms-->
+      <form>
+      	<div>
+      	<label>First Name</label>
+      	<input type="text" name="first-name">
+      </div>
+      <br>
+      	<label>Last Name</label>
+      	<input type="text" name="Last-name">
+      </div>
+      <br>
+      <div>
+      	<label>Email</label>
+      	<input type="email" name="email">
+      </div>
+      <br>
+      <div>
+      	<label>Messages</label>
+      	<textarea name="messages"></textarea>
+      </div>
+      <br>
+      <div>
+      	<label>Gender</label>
+      	<select name="gender">
+      		<option value="male">Male</option>
+      		<option valeu=female">Female</option>
+      		<option valeu="other">Other</option>
+       </select>
+      </div>
+     </form>
+
+     <!--buttons-->
+     <button>Click Me</button>
+    <a href="img/code2.jpg">
+     <img src="img/code2.jpg">
+    </a>
 </body>
 </html>
