--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>HTML Cheat Sheet</title>
 </head>
 <body>
+  <a href="blog.html">Go to blog</a>
 	<!-- Headings -->
 	<h1>Heading One</h1>
 	<h2>Herading Two</h2>
